--- a/createaccount.html
+++ b/createaccount.html
@@ -12,10 +12,11 @@
     <br>
     <label for="email">Email:</label><br>
     <input type="text" id="email" name="email"><br>
+    <br>
     <label for="username">Username:</label><br>
     <input type="text" id="username" name="username"><br>
     <br>
-    <label for="password">Password</label><br>
+    <label for="password">Password:</label><br>
     <input type="password" id="password" name="password"><br><br>
     <input type="submit" onclick="location.href = 'Friendshare.skillshare.repl.co/account.html';" id="createaccount" value="Submit"><br>
     <br>
