updating links and account

--- a/account.html
+++ b/account.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&amp;display=swap" rel="stylesheet">
   </head>
   <body cz-shortcut-listen="true">
-    <h2 id="title">Create An Account</h2>
+    <h2 id="title">Your Account</h2>
     Already have an account? <a href="http://friendshare.skillshare.repl.co/login.html">Log-in here!</a><br>
     <br>
     <label for="email">Email:</label><br>
