--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
         </p><h3 class="box">
           Teach a Skill
         </h3>
-      FriendShare allows you to <b>share</b> the skills you want to share to the people you want, when you want. Simply post a quick message of what you can do and tag it with your respective skill. Since FriendShare is a simple and flexible platform, <b>you</b> have the choice in what information you want to give out. <a href="/createaccount">Make an account</a> to share your skills today!
+      FriendShare allows you to <b>share</b> the skills you want to share to the people you want, when you want. Simply post a quick message of what you can do and tag it with your respective skill. Since FriendShare is a simple and flexible platform, <b>you</b> have the choice in what information you want to give out. <a href="/createaccount.html">Make an account</a> to share your skills today!
   </div>
   </body>
