--- a/account.html
+++ b/account.html
@@ -8,7 +8,7 @@
   </head>
   <body cz-shortcut-listen="true">
     <h2 id="title">Your Account</h2>
-    Already have an account? <a href="http://friendshare.skillshare.repl.co/login.html">Log-in here!</a><br>
+    Already have an account? <a href="http://bow-friends.github.io/login.html">Log-in here!</a><br>
     <br>
     <label for="email">Email:</label><br>
     <input type="text" id="email" name="email"><br>
@@ -18,9 +18,9 @@
     <br>
     <label for="password">Password:</label><br>
     <input type="password" id="password" name="password"><br><br>
-    <input type="submit" onclick="location.href = 'http://friendshare.skillshare.repl.co/account.html';" id="createaccount" value="Submit"><br>
+    <input type="submit" onclick="location.href = 'http://bow-friends.github.io/account.html';" id="createaccount" value="Submit"><br>
     <br>
-    Note: This is a prototype of our app. It will not store your data since this is a static website. Clicking the submit button will redirect you to <a href="">a prototype</a> of what our account page will look like.
+    Note: This is a prototype of our app. It will not store your data since this is a static website. Clicking the submit button will redirect you to <a href="http://bow-friends.github.io/account.html">a prototype</a> of what our account page will look like.
   </body>
 
 </html>
