updating main pages

--- a/index.html
+++ b/index.html
@@ -9,20 +9,18 @@
     <h2 id="title">Welcome to FriendShare!</h2>
     <div class="column">
       <br>
-      <p class="info">
-        </p><h3 class="box">
+        <h3 class="box">
           Learn Something
         </h3>
+      <br>
       FriendShare allows you to <b>share</b> what you want to learn with people and <b>see</b> which BOW clubs and/or students share that same interest. It's also an all-in-one place where you can view every club in the three-college system. All of these features are available for free when you <a href="/createaccount.html">make an account</a>.
       <br>
       <br>
       <br>
-      <p></p>
-      <p class="info">
-        <br>
-        </p><h3 class="box">
+        <h3 class="box">
           Find a Buddy
         </h3>
+      <br>
       FriendShare allows you to find <b>other</b> people in the BOW community who want to learn or teach the same skill that you are interested in. Making friends is so much easier when you're learning something new together! <a href="/createaccount.html">Create an account</a> to start finding your study buddies.
       <br>
       <br>
@@ -30,11 +28,10 @@
       <br>
       <br>
       <br>
-      <p></p>
-      <p class="info">
-        </p><h3 class="box">
+        <h3 class="box">
           Teach a Skill
         </h3>
+      <br>
       FriendShare allows you to <b>share</b> the skills you want to share to the people you want, when you want. Simply post a quick message of what you can do and tag it with your respective skill. Since FriendShare is a simple and flexible platform, <b>you</b> have the choice in what information you want to give out. <a href="/createaccount.html">Make an account</a> to share your skills today!
   </div>
   </body>
