--- a/account.html
+++ b/account.html
@@ -7,11 +7,12 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&amp;display=swap" rel="stylesheet">
   </head>
   <body cz-shortcut-listen="true">
-    <h2 id="title">Your Account</h2>
-    Already have an account? <a href="http://bow-friends.github.io/login.html">Log-in here!</a><br>
+    <h2 id="title">Your Friends</h2>
+    Below is your list of skillful friends.
     <br>
-    <label for="email">Email:</label><br>
-    <input type="text" id="email" name="email"><br>
+    <div class = "friend">
+      Richard
+    </div>
     <br>
     <label for="username">Username:</label><br>
     <input type="text" id="username" name="username"><br>
