--- a/login.html
+++ b/login.html
@@ -8,16 +8,16 @@
   </head>
   <body cz-shortcut-listen="true">
     <h2 id="title">Log In</h2>
-    Need to make an account? <a href="http://friendshare.skillshare.repl.co/createaccount.html">Register here!</a><br>
+    Need to make an account? <a href="http://bow-friends.github.io/createaccount.html">Register here!</a><br>
     <br>
     <label for="username">Username:</label><br>
     <input type="text" id="username" name="username"><br>
     <br>
     <label for="password">Password:</label><br>
     <input type="password" id="password" name="password"><br><br>
-    <input type="submit" onclick="location.href = 'http://friendshare.skillshare.repl.co/account.html';" id="createaccount" value="Submit"><br>
+    <input type="submit" onclick="location.href = 'http://bow-friends.github.io/account.html';" id="createaccount" value="Submit"><br>
     <br>
-    Note: This is a prototype of our app. It will not store your data since this is a static website. Clicking the submit button will redirect you to <a href="">a prototype</a> of what our account page will look like.
+    Note: This is a prototype of our app. It will not store your data since this is a static website. Clicking the submit button will redirect you to <a href="http://bow-friends.github.io/account.html">a prototype</a> of what our account page will look like.
   </body>
 
 </html>
