--- a/account.html
+++ b/account.html
@@ -8,20 +8,13 @@
   </head>
   <body cz-shortcut-listen="true">
     <h2 id="title">Your Friends</h2>
-    Below is your list of skillful friends.
+    <br>
+    Search for specific skills to find new friends! You don't have any friends yet :(
     <br>
     <div class = "friend">
       Richard
     </div>
-    <br>
-    <label for="username">Username:</label><br>
-    <input type="text" id="username" name="username"><br>
-    <br>
-    <label for="password">Password:</label><br>
-    <input type="password" id="password" name="password"><br><br>
-    <input type="submit" onclick="location.href = 'http://bow-friends.github.io/account.html';" id="createaccount" value="Submit"><br>
-    <br>
-    Note: This is a prototype of our app. It will not store your data since this is a static website. Clicking the submit button will redirect you to <a href="http://bow-friends.github.io/account.html">a prototype</a> of what our account page will look like.
+ is a prototype of our app. It will not store your data since this is a static website. Clicking the submit button will redirect you to <a href="http://bow-friends.github.io/account.html">a prototype</a> of what our account page will look like.
   </body>
 
 </html>
